# pythonsd-django

./: ,editorconfig  .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Procfile  README.md  appveyor.yml  circle.yml  compose.yaml  fly.toml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tasks.py  tox.ini  webpack.config.js
.circleci/: config.yml
.env/: local.sample  postgres
.github/workflows/: ci.yml  deploy.yml
assets/src/: index.js  input.css
assets/src/sass/: _theme.scss  _variables.scss  index.scss
config/: context_processors.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docker/: start
homepage/: views.py
homepage/jinja2/homepage/: index.html
jinja2/: base.html
pythonsd/: admin.py  jinja2.py  models.py  settings.py  sitemap.py  static_files.py  tests.py  urls.py  views.py  wsgi.py
pythonsd/jinja2/: 404.html  500.html  base.html
pythonsd/jinja2/pythonsd/pages/: chat-room.html  code-of-conduct.html  getting-started.html  job-posting.html
pythonsd/migrations/: 0001_initial.py  0002_sponsor.py
pythonsd/sass/: pythonsd.scss
pythonsd/static/js/: main.js
pythonsd/templates/pythonsd/: base.html  code-of-conduct.html  index.html  meetup-widget.html  organizers.html
pythonsd/templates/pythonsd/fragments/: recent-videos.html  upcoming-events.html
pythonsd/tests/: __init__.py  test_models.py
pythonsd/tests/data/: meetup-events-api.json  youtube-video-feed.xml
raffle/: models.py  urls.py  views.py
raffle/jinja2/raffle/: auth.html  raffle.html
raffle/migrations/: 0001_initial.py  0002_auto_20151111_0640.py
requirements/: common.txt  deployment.txt  local.txt
sponsors/: admin.py  models.py
sponsors/migrations/: 0001_initial.py
